# onenote-to-joplin

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: memory.db
.claude-flow/: .trend-cache.json  CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/agents/: store.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  swarm-activity.json  v3-progress.json
.claude-flow/plans/: architecture.md  concept-validation.md  implementation-plan.md
.claude-flow/security/: audit-status.json
docs/: BUILD.md  human_guide.md  release.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/checks/: com_check.rs  joplin_check.rs  mod.rs  onenote_check.rs  os_check.rs  registry.rs  sync_check.rs  word_check.rs
src-tauri/src/commands/: checks.rs  mod.rs  report.rs
src/components/layout/: StatusBar.tsx
src/components/results/: CheckDetail.tsx  CheckListItem.tsx  MigrationGuide.tsx  ResultsSummary.tsx  ResultsView.tsx
src/components/scan/: EmptyState.tsx  ScanningState.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx
src/components/wizard/: WizardNav.tsx  WizardStep.tsx  WizardStepper.tsx  WizardView.tsx
src/hooks/: useKeyboard.ts  useReadinessScan.ts  useReport.ts  useStatusBar.ts  useWizard.ts
src/stores/: appStore.ts  types.ts
